Update to latest version. Remove postBuild. Start work on README.

--- a/Interactive_Region_Contours.ipynb
+++ b/Interactive_Region_Contours.ipynb
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "03f80b68-b196-45dd-8286-055548d718c4",
    "metadata": {
     "tags": []
@@ -514,7 +514,7 @@
     "        self.fig = None\n",
     "        self.cmap = cmap\n",
     "        with plt.ioff():\n",
-    "            self.fig = plt.figure(figsize=(6, 3), layout='constrained')\n",
+    "            self.fig = plt.figure(figsize=(6, 2.5), layout='constrained')\n",
     "        self.fig.canvas.toolbar_visible = False\n",
     "        self.fig.canvas.header_visible = False\n",
     "        self.ax = self.fig.add_subplot(111)\n",
@@ -607,8 +607,7 @@
     "                s1.observe(_update_L2y_slider, names='value')\n",
     "                s1.observe(_update_L2x_slider, names='value')\n",
     "                s2x.observe(_update_L2y_slider, names='value')\n",
-    "            case 'E3':\n",
-    "                self.manifold = ManifoldE3()\n",
+    "            case 'E3' | 'E4' | 'E5':\n",
     "                LA = 2\n",
     "                s = self.length_sliders[0]\n",
     "                s.min = 1\n",
@@ -619,30 +618,12 @@
     "                s.layout.visibility = 'visible'\n",
     "                s.description='$L_A$'\n",
     "                s.observe(self._on_length_change, names='value')\n",
-    "            case 'E4':\n",
-    "                LA = 2\n",
-    "                s = self.length_sliders[0]\n",
-    "                s.min = 1\n",
-    "                s.max = 4\n",
-    "                s.step = 0.1\n",
-    "                s.value = LA\n",
-    "                s.disabled = False\n",
-    "                s.layout.visibility = 'visible'\n",
-    "                s.description='$L_A$'\n",
-    "                s.observe(self._on_length_change, names='value')\n",
-    "                self.manifold = ManifoldE4()\n",
-    "            case 'E5':\n",
-    "                LA = 2\n",
-    "                s = self.length_sliders[0]\n",
-    "                s.min = 1\n",
-    "                s.max = 4\n",
-    "                s.step = 0.1\n",
-    "                s.value = LA\n",
-    "                s.disabled = False\n",
-    "                s.layout.visibility = 'visible'\n",
-    "                s.description='$L_A$'\n",
-    "                s.observe(self._on_length_change, names='value')\n",
-    "                self.manifold = ManifoldE5()\n",
+    "                if manifold_name == 'E3':\n",
+    "                    self.manifold = ManifoldE3()\n",
+    "                elif manifold_name == 'E4':\n",
+    "                    self.manifold = ManifoldE4()\n",
+    "                else:\n",
+    "                    self.manifold = ManifoldE5()\n",
     "            case _:\n",
     "                raise ValueError(f'Unknown manifold name: \"{manifold_name}\"')\n",
     "\n",
@@ -707,23 +688,23 @@
     "        L1_slider = widgets.FloatSlider(value=0, min=0, max=1, step=0.1,\n",
     "                                        description=r'$L_1$',\n",
     "                                        disabled=True,\n",
-    "                                        orientation='vertical',\n",
+    "                                        orientation='horizontal',\n",
     "                                        continuous_update=False,\n",
     "                                        readout=True)\n",
     "        L2_slider = widgets.FloatSlider(value=0, min=0, max=1, step=0.05,\n",
     "                                         description=r'$L_2$',\n",
     "                                         disabled=True,\n",
-    "                                         orientation='vertical',\n",
+    "                                         orientation='horizontal',\n",
     "                                         continuous_update=False,\n",
     "                                         readout=True)\n",
     "        L3_slider = widgets.FloatSlider(value=0, min=0, max=1, step=0.1,\n",
     "                                         description=r'$L_2$',\n",
     "                                         disabled=True,\n",
-    "                                         orientation='vertical',\n",
+    "                                         orientation='horizontal',\n",
     "                                         continuous_update=False,\n",
     "                                         readout=True)\n",
     "        self.length_sliders = [L1_slider, L2_slider, L3_slider]\n",
-    "        lengthsliders = widgets.HBox(self.length_sliders)\n",
+    "        lengthsliders = widgets.VBox(self.length_sliders)\n",
     "        manifoldchooser = widgets.Dropdown(\n",
     "            options=self._implemented_manifold_names,\n",
     "            value=self._implemented_manifold_names[0],\n",
@@ -736,7 +717,7 @@
     "                                       left_sidebar=sidebar,\n",
     "                                       center=self.fig.canvas,\n",
     "                                       right_sidebar=None,\n",
-    "                                       pane_widths=[2.5, 5, 0]\n",
+    "                                       pane_widths=[2.4, 5, 0]\n",
     "                                      )\n",
     "        \n",
     "    def fill_plot(self):\n",
@@ -761,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "84bc4bd8-ed83-47e1-bbe7-d83a572397d9",
    "metadata": {
     "tags": []
@@ -770,7 +751,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78b00bf767af4d7a8412b5130f2481ee",
+       "model_id": "0e5af107dfb5455a9ea815ed0c6799c2",
        "version_major": 2,
        "version_minor": 0
       },
