More improvements, particularly to the Klein spaces and E7 in particular.

--- a/Interactive_Region_Contours.ipynb
+++ b/Interactive_Region_Contours.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c83b1cf0-795c-41c2-98d4-cb032f4f25ec",
+   "id": "da24dec2-1d16-4542-bede-c020a323b2f0",
    "metadata": {},
    "source": [
     "# Interactive Region Contours\n",
@@ -19,13 +19,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e989ee58-371c-426e-baf7-f1912e402421",
+   "id": "9dbbc5ba-9d20-4485-923b-512887a02990",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "307db58c9f14427c9c37948665e0157a",
+       "model_id": "d295a056f75a47cb8c9c990e97d6ada2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,13 +46,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60631570-bf06-4f30-883f-c6b499cea21b",
+   "id": "a5623f47-01a6-4fa5-a797-4476f2bf524c",
    "metadata": {},
    "source": [
     "# Some Documentation\n",
     "\n",
     "The main idea is that an observer will see circles in the CMB if their nearest clone is nearer than the diameter of the last scattering surface. Measuring distances in terms of this diameter, this means circles are seen if the nearest clone is less than 1 unit of distance away.\n",
-    "\n",
     "In $E_2$-$E_5$ and $E_7$-$E_{10}$ we can restrict our study to points in the $xy$-plane.\n",
     "This is one reason why we do not include $E_6$ as it requires studying all points in three dimensions.\n",
     "\n",
@@ -246,9 +245,17 @@
     "$$ |y| < \\Delta y \\quad\\mathrm{or}\\quad \\left| y \\pm \\frac{L_{1y}}{2} \\right| < \\Delta y. $$\n",
     "Implicit in this is that $\\Delta y_1$ and $\\Delta y_2$ are defined.\n",
     "This means the interesting parameter region is where\n",
-    "$$ \\frac{1}{2} \\leq L_{Ax} \\leq 1 \\quad\\mathrm{and}\\quad (L_{Ax} - |L_{2x}|)^2 + L_{2z}^2 \\leq 1 \\quad\\mathrm{with}\\quad L_{2x}^2 + L_{2z}^2 \\geq 1. $$\n",
+    "$$ \\frac{1}{2} \\leq L_{Ax} \\quad\\mathrm{and}\\quad (L_{Ax} - |L_{2x}|)^2 + L_{2z}^2 \\leq 1 \\quad\\mathrm{with}\\quad L_{2x}^2 + L_{2z}^2 \\geq 1. $$\n",
     "The fraction of observers that see circles is then given by\n",
-    "$$ f = \\frac{4 \\Delta y}{L_{1y}}. $$"
+    "$$ f = \\frac{4 \\Delta y}{L_{1y}}. $$\n",
+    "\n",
+    "This opens up some interesting behavior.\n",
+    "When $L_{2x} = 0$ everything is straight forward, there are only two lengths that (when we are no in the case where either all or none of the observers see circles) determine if an observer sees circles: $L_{Ax}$ and $L_{1y}$, $\\Delta y = \\Delta y_1$, and we have simple behavior.\n",
+    "However, when $L_{2x} \\neq 0$ we have four lengths that determine which observers see circles: $L_{Ax}$, $L_{1y}$, $L_{2x}$ and $L_{2z}$.\n",
+    "The various constraints on these parameters get relaxed.\n",
+    "For example, it is possible for $L_{Ax} > 1$ and circles still seen by observers (since $L_{2x}$ can compensate).\n",
+    "Further, the fraction of observers that see circles is no longer monotonic in $L_{Ax}$: we can transition from $\\Delta y_1$ determining the fraction to $\\Delta y_2$ determining the fraction.\n",
+    "This is different behavior than that for the orientable compact manifolds."
    ]
   },
   {
@@ -275,9 +282,11 @@
     "$$ |y| < \\Delta y_1 \\quad\\mathrm{or}\\quad \\left| y \\pm \\frac{L_{1y}}{2} \\right| < \\Delta y_1 \\quad\\mathrm{or}\\quad \\left|y \\pm \\frac{L_{1y}}{4} \\right| < \\Delta y_2. $$\n",
     "Implicit in this is that $\\Delta y_1$ and $\\Delta y_2$ are defined.\n",
     "This means the interesting parameter region is where\n",
-    "$$ \\frac{1}{2} \\leq L_{Ax} \\leq 1 \\quad\\mathrm{and}\\quad (L_{Ax} - |L_{2x}|)^2 + L_{2z}^2 \\leq 1 \\quad\\mathrm{with}\\quad L_{2x}^2 + L_{2z}^2 \\geq 1 - \\frac{L_{1y}^2}{4}. $$\n",
+    "$$ \\frac{1}{2} \\leq L_{Ax} \\quad\\mathrm{and}\\quad (L_{Ax} - |L_{2x}|)^2 + L_{2z}^2 \\leq 1 \\quad\\mathrm{with}\\quad L_{2x}^2 + L_{2z}^2 \\geq 1 - \\frac{L_{1y}^2}{4}. $$\n",
     "The fraction of observers that see circles is then given by\n",
-    "$$ f = \\frac{4 (\\Delta y_1 + \\Delta y_2)}{L_{1y}}. $$"
+    "$$ f = \\frac{4 (\\Delta y_1 + \\Delta y_2)}{L_{1y}}. $$\n",
+    "\n",
+    "If $L_{2x} \\neq 0$, then $L_{Ax} > 1$ can still have observers that see circles when $\\Delta y_2 > 0$."
    ]
   },
   {
@@ -307,7 +316,13 @@
     "\n",
     "Additionally, since $\\mathsf{M}_A \\mathsf{M}_B$ is a half-turn around the $z$-axis, there will also be circular regions that see circles.\n",
     "\n",
-    "From combinations of $g_C$ with $g_A g_B$ we find four more circular regions with $r < \\Delta x$ centered at $(\\pm L_{Ax}/2, \\pm L_{Cy}/2)$."
+    "From combinations of $g_C$ with $g_A g_B$ we find four more circular regions with $r < \\Delta x$ centered at $(\\pm L_{Ax}/2, \\pm L_{Cy}/2)$.\n",
+    "\n",
+    "*Note:* For plotting purposes we are using coordinates $(x/L_{Ax}, y)$, thus the circles become ellipses in the figure (not just due to the aspect rection of the plot axes).\n",
+    "In other words we have a region like $x^2 + y^2 < \\alpha^2$ which has boundary\n",
+    "$$ \\alpha^2 = x^2 + y^2 = L_{Ax}^2 (x / L_{Ax})^2 + y^2 . $$\n",
+    "Written in standard form we see this an ellipse\n",
+    "$$ \\left( \\frac{x / L_{Ax}}{\\alpha / L_{Ax}} \\right)^2 + \\left( \\frac{y}{\\alpha} \\right)^2 = 1. $$"
    ]
   },
   {
