Trivial E8 documentation typo fix.

--- a/Interactive_Region_Contours.ipynb
+++ b/Interactive_Region_Contours.ipynb
@@ -300,7 +300,7 @@
     "Choosing the special location the translations associated with these matrices are\n",
     "$$ \\vec{T}_A = \\begin{pmatrix} L_{Ax} \\\\ 0 \\\\ 0 \\end{pmatrix}, \\;\n",
     "\\vec{T}_{B} = \\begin{pmatrix} 0 \\\\ 0 \\\\ L_{Bz} \\end{pmatrix}, \\;\n",
-    "\\vec{T}_{B_2} = \\begin{pmatrix} 0 \\\\ L_{Cy} \\\\ 0 \\end{pmatrix}. $$\n",
+    "\\vec{T}_{C} = \\begin{pmatrix} 0 \\\\ L_{Cy} \\\\ 0 \\end{pmatrix}. $$\n",
     "The associated $E_1$ has $\\vec{T}_1 = (2 L_{Ax}, 0, 0)^T$, $\\vec{T}_2 = \\vec{T}_C$, and $\\vec{T}_3 = (0, 0, 2 L_{Bz})^T$.\n",
     "We may always choose $L_{Ax}$, $L_{Cy}$, and $L_{Bz}$ positive (they cannot be zero) along with .\n",
     "All observers see circles if any one of the associated $E_1$ translations have length less than one.\n",
